--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <a href="https://codepen.io/Julie31/full/rezxGd/" target="_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
-                <h4> One page avec Bootstrap (exercice FreeCodeCamp)</h4>
+                <p> One page avec Bootstrap (exercice FreeCodeCamp)</p>
             </div>
             <div class="col-xs-12 col-md-4">
                 <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigold" /></a>
-                <h4>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</h4>
+                <p>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</p>
             </div>
             <div class="col-xs-12 col-md-4">
                 <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"><img src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded" alt="miniature shop list witdh php" /></a>
-                <h4>Une Simple Shopping ToDo Liste en php</h4>
+                <p>Une Simple Shopping ToDo Liste en php</p>
             </div>
         </div>
        
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <a href="site_wordpress.html" target="_blank"><img src="asset/img/accueil.jpg" class="img-responsive center-block img-rounded" alt="Miniature site association syrien ne bouge" /></a>
-                <h4>Création d'un site Wordpress pour l'association Syrien ne bouge</h4>
+                <p>Création d'un site Wordpress pour l'association Syrien ne bouge</p>
             </div>
             <div class="col-xs-12 col-md-4">
                 <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
