modif index + lien + texte

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     </nav>
 
     <header role="banner" id="jumbotron">
-      <h1 class="text-center"><strong>Julie Alary<br/><br/>En Formation Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
+    <h1 class="text-center"><strong>Julie Alary<br/><br/>Développeuse Web</strong></h1> <br/><br/>  <!--@ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif 3W</a>      -->
     </header>
     
     <section role="main" id="portfolio" class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <a href="https://codepen.io/Julie31/full/rezxGd/" target="_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
+                <a href="http://phpcodeproject.herokuapp.com/" target="_blank" title="MyCMS application personnelle"><img src="asset/img/mycms.png" class="img-responsive center-block img-rounded" alt="Miniature vers myCMS" /></a>
+                <p>Création d'un CMS pour mon examen de fin d'année</p>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <a href="http://s.codepen.io/Julie31/debug/rezxGd/yPAJjGPgLxbA" target="_blank" title="One Page tribute to Santigold"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
                 <p> One page avec Bootstrap (exercice FreeCodeCamp)</p>
             </div>
             <div class="col-xs-12 col-md-4">
                 <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg" class="img-responsive center-block img-rounded" alt="miniature exercice random quote santigold" /></a>
                 <p>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</p>
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"><img src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded" alt="miniature shop list witdh php" /></a>
-                <p>Une Simple Shopping ToDo Liste en php</p>
             </div>
         </div>
        
@@ -70,10 +70,8 @@
                 <p>Création d'un site Wordpress pour l'association Syrien ne bouge</p>
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <img src="asset/img/coming_soon.jpg" class="img-responsive center-block img-rounded" alt="Miniature bientot nouvelle présentation" />
+                <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"><img src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded" alt="miniature shop list witdh php" /></a>
+                <p>Une Simple Shopping ToDo Liste en php</p>
             </div>
         </div>
     </section>
