diverses modif cv + accueil

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 </nav>
 
 <header role="banner" id="jumbotron">
-    <h1 class="text-center"><strong>Julie Alary<br/><br/>Développeuse Web <br/><br/> En recherche active
-        d'emploi</strong></h1>
+    <h1 class="text-center"><strong>Julie Alary<br/><br/>Développeuse Web</strong></h1>
+    <h2><strong>En recherche active d'emploi</strong></h2>
 </header>
 
 <section role="main" id="portfolio" class="container-fluid">
@@ -63,7 +63,7 @@
             <a href="http://phpcodeproject.herokuapp.com/" target="_blank" title="MyCMS application personnelle"><img
                     src="asset/img/mycms.png" class="img-responsive center-block img-rounded"
                     alt="Miniature vers myCMS"/></a>
-            <p>Création d'un CMS pour mon examen de fin d'année</p>
+            <p>Création d'un CMS pour mon examen de fin d'année (réalisé avec Symfony)</p>
         </div>
         <div class="col-xs-12 col-md-4">
             <a href="http://s.codepen.io/Julie31/debug/rezxGd/yPAJjGPgLxbA" target="_blank"
@@ -73,22 +73,25 @@
             <p> One page avec Bootstrap (exercice FreeCodeCamp)</p>
         </div>
         <div class="col-xs-12 col-md-4">
-            <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank"><img src="asset/img/random.jpg"
-                                                                                  class="img-responsive center-block img-rounded"
-                                                                                  alt="miniature exercice random quote santigold"/></a>
+            <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank" title="random quote"><img
+                    src="asset/img/random.jpg"
+                    class="img-responsive center-block img-rounded"
+                    alt="miniature exercice random quote santigold"/></a>
             <p>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</p>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-12 col-md-4">
-            <a href="site_wordpress.html" target="_blank"><img src="asset/img/accueil.jpg"
-                                                               class="img-responsive center-block img-rounded"
-                                                               alt="Miniature site association syrien ne bouge"/></a>
+            <a href="site_wordpress.html" target="_blank" title="association syrien ne bouge"><img
+                    src="asset/img/accueil.jpg"
+                    class="img-responsive center-block img-rounded"
+                    alt="Miniature site association syrien ne bouge"/></a>
             <p>Création d'un site Wordpress pour l'association Syrien ne bouge</p>
         </div>
         <div class="col-xs-12 col-md-4">
-            <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"><img
+            <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"
+               title="todo list en php"><img
                     src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded"
                     alt="miniature shop list witdh php"/></a>
             <p>Une Simple Shopping ToDo Liste en php</p>
@@ -99,19 +102,19 @@
 <section role="main" id="skills">
     <div class="about">
         <h2>Passionnée d'informatique</h2>
-        <h3>Après avoir passer une dizaine d'année dans le Commerce et le Management, j'ai décidé de me reconvertir
+        <h3>Après avoir passé une dizaine d'années dans le Commerce et le Management, j'ai décidé de me reconvertir
             professionnellement</h3>
-        <h4>J'ai commencé par m'autoformer sur divers languages, par la suite j'ai passé le diplôme "Déaveloppeur
+        <h4>J'ai commencé par m'autoformer sur divers languages, par la suite j'ai passé le diplôme "Développeur
             Logiciel" <br><br> @ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif
                 3W</a></h4><br/>
         <p><strong>Mes compétences :</strong></p>
     </div>
 
     <div class="row">
-        <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.html" role="button">Curriculum
+        <div class="col-xs-6 col-md-6 col-md-offset-3 text-center"><a class="btn btn-default btn-lg" href="cv.html"
+                                                                      role="button">Curriculum
             Vitae</a></div>
-        <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html"
-                                                      role="button">Programme de la formation</a></div>
+
     </div>
 
     <div class="row">
@@ -127,10 +130,10 @@
     <div class="row">
         <div class="col-xs-3 col-md-3"><img src="asset/img/boostrap.png" class="img-responsive center-block boostrap"
                                             alt="logo boostrap"/></div>
+        <div class="col-xs-3 col-md-3"><img src="http://symfony.com/logos/symfony_black_03.png?v=5" class="img-responsive center-block" alt="lolo symfony"></div>
+
         <div class="col-xs-3 col-md-3"><img src="asset/img/rails.svg" class="img-responsive center-block rails"
                                             alt="Logo Ruby on rails"/></div>
-        <div class="col-xs-3 col-md-3"><img src="asset/img/ruby.png" class="img-responsive center-block"
-                                            alt="logo ruby"/></div>
         <div class="col-xs-3 col-md-3"><img src="asset/img/Git.png" class="img-responsive center-block" alt="logo git"/>
         </div>
     </div>
