--- a/cv.html
+++ b/cv.html
@@ -37,7 +37,7 @@
 <header role ="banner">
   <div class="row presentation">
       <div class="col-md-6 col-md-offset-2 text-center">
-          <h1>WebDeveloppeu[se] cherche stage</h1>
+          <h1>WebDeveloppeu[se]</h1>
       </div>
       <div class="col-md-4">
           <img src="asset/img/julie.jpg" width="160" class="center-block img-responsive img-circle" alt="photo personnelle">
@@ -61,6 +61,8 @@
 
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 experience">
     <h2>EXPERIENCES</h2>
+      <h3>2016-2017 : Développeuse web (stage) - Iwit-Systems</h3>
+      <p>Utilsation de du Frameword Symfony pour développer des modules : bloc-note, gestion des actus...</p>
       <h3>2015 : Déléguée Commerciale - Editions Jocatop</h3>
       <p>Vente directe, Prise de rendez-vous, Phonning, Orgnisation de tournées sur trois départements.</p>
       <hr/>
@@ -94,7 +96,7 @@
 </section>
 
     <div class="col-md-6 col-md-offset-3 text-center">
-        <a class="btn btn-default btn-lg" href="CV-julie-alary.pdf" role="button">Télécharger le cv</a>
+        <a class="btn btn-default btn-lg" href="CV-julie-alary.pdf" role="button" target="_blank">Télécharger le cv</a>
     </div>
         
     <div class="row arrow_cv">
