--- a/index.html
+++ b/index.html
@@ -59,37 +59,37 @@
 
 <section role="main" id="portfolio" class="container-fluid">
     <div class="row">
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
             <a href="http://phpcodeproject.herokuapp.com/" target="_blank" title="MyCMS application personnelle"><img
                     src="asset/img/mycms.png" class="img-responsive center-block img-rounded"
                     alt="Miniature vers myCMS"/></a>
             <p>Création d'un CMS pour mon examen de fin d'année (réalisé avec Symfony)</p>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
             <a href="http://s.codepen.io/Julie31/debug/rezxGd/yPAJjGPgLxbA" target="_blank"
                title="One Page tribute to Santigold"><img src="asset/img/santigold.jpg"
                                                           class="img-responsive center-block img-rounded"
                                                           alt="Minitature du tribute sur Santigold"></a>
             <p> One page avec Bootstrap (exercice FreeCodeCamp)</p>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
             <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank" title="random quote"><img
                     src="asset/img/random.jpg"
                     class="img-responsive center-block img-rounded"
                     alt="miniature exercice random quote santigold"/></a>
             <p>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</p>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
             <a href="site_wordpress.html" target="_blank" title="association syrien ne bouge"><img
                     src="asset/img/accueil.jpg"
                     class="img-responsive center-block img-rounded"
                     alt="Miniature site association syrien ne bouge"/></a>
             <p>Création d'un site Wordpress pour l'association Syrien ne bouge</p>
         </div>
-        <div class="col-xs-12 col-md-4">
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-md-3">
             <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"
                title="todo list en php"><img
                     src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded"
@@ -130,7 +130,8 @@
     <div class="row">
         <div class="col-xs-3 col-md-3"><img src="asset/img/boostrap.png" class="img-responsive center-block boostrap"
                                             alt="logo boostrap"/></div>
-        <div class="col-xs-3 col-md-3"><img src="http://symfony.com/logos/symfony_black_03.png?v=5" class="img-responsive center-block" alt="lolo symfony"></div>
+        <div class="col-xs-3 col-md-3"><img src="http://symfony.com/logos/symfony_black_03.png?v=5"
+                                            class="img-responsive center-block" alt="lolo symfony"></div>
 
         <div class="col-xs-3 col-md-3"><img src="asset/img/rails.svg" class="img-responsive center-block rails"
                                             alt="Logo Ruby on rails"/></div>
