--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
 
     <div class="row">
         <div class="col-xs-12 col-md-3">
+            <a href="http://codepen.io/Julie31/full/BWLqWe/" target="_blank" title="landing page"><img
+                    src="asset/img/landingpage.png"
+                    class="img-responsive center-block img-rounded"
+                    alt="Miniature site personnel landing page"/></a>
+            <p>Landing Page avec Flexbox (FreeCodeCamp exercice)</p>
+        </div>
+    </div>
+        <div class="col-xs-12 col-md-3">
             <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"
                title="todo list en php"><img
                     src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded"
