--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Création d'un CMS pour mon examen de fin d'année (réalisé avec Symfony)</p>
         </div>
         <div class="col-xs-12 col-md-3">
-            <a href="http://s.codepen.io/Julie31/debug/rezxGd/yPAJjGPgLxbA" target="_blank"
+            <a href="http://codepen.io/Julie31/full/rezxGd/" target="_blank"
                title="One Page tribute to Santigold"><img src="asset/img/santigold.jpg"
                                                           class="img-responsive center-block img-rounded"
                                                           alt="Minitature du tribute sur Santigold"></a>
