lègères modif cv

--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
 <section role="main" class="row">
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 formation">
     <h2>FORMATION</h2>
-    <p class="intitule">2016-2017 : <span>Formation Developper Web</span> [ Ecole Objectif 3W à Montpellier (34) ]</p>
+    <p class="intitule">2016-2017 : <span>Diplôme "Développeur Logiciel (BAC + 2)</span> [ Ecole Objectif 3W à Montpellier (34) ]</p>
     <hr/>
     <p class="intitule">2003-2005 : Niveau <span>DEUG Géographie</span> [ Université Jean Jaurès à Toulouse (31) ]</p>
     <hr/>
@@ -61,7 +61,7 @@
 
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 experience">
     <h2>EXPERIENCES</h2>
-      <h3>2016-2017 : Développeuse web (stage) - Iwit-Systems</h3>
+      <h3>2016-2017 (2 mois) : Développeuse web (stage) - Iwit-Systems</h3>
       <p>Utilsation de du Frameword Symfony pour développer des modules : bloc-note, gestion des actus...</p>
       <h3>2015 : Déléguée Commerciale - Editions Jocatop</h3>
       <p>Vente directe, Prise de rendez-vous, Phonning, Orgnisation de tournées sur trois départements.</p>
