lègères modif cv - 2

--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
 <section role="main" class="row">
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 formation">
     <h2>FORMATION</h2>
-    <p class="intitule">2016-2017 : <span>Diplôme "Développeur Logiciel (BAC + 2)</span> [ Ecole Objectif 3W à Montpellier (34) ]</p>
+    <p class="intitule">2016-2017 : <span>Diplôme "Développeur Logiciel"</span>(BAC + 2) [ Ecole Objectif 3W à Montpellier (34) ]</p>
     <hr/>
     <p class="intitule">2003-2005 : Niveau <span>DEUG Géographie</span> [ Université Jean Jaurès à Toulouse (31) ]</p>
     <hr/>
