--- a/meteo_app.html
+++ b/meteo_app.html
@@ -9,6 +9,7 @@
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="ie-lt9.css">
     <script type="text/javascript" src="js/html5shiv.js"</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <![endif]-->
     <!--[if gte IE 9]>
     Code HTML plus superieur ou egal IE 9
