test meteo_app css 1

--- a/meteo_app.html
+++ b/meteo_app.html
@@ -17,7 +17,7 @@
 
     <!--[if !IE]><!-->
     <!-- // Code HTML réservé aux navigateurs autres que IE -->
-    <link href="css/style.css" rel="stylesheet" media="screen" type="text/css">
+    <link href="css/meteo_app.css" rel="stylesheet" media="screen" type="text/css">
     <!--<[endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>
