--- a/meteo_app.html
+++ b/meteo_app.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Météo App || FreeCodeCamp Exercice</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0"/>
+    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
+
 
     <meta name="description"
           content="Application Météo, réalisée avec l'API Weather Underground, bootstrap et javascript"/>
