ajout météo App

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
             <p>Landing Page avec Flexbox (FreeCodeCamp exercice)</p>
         </div>
         <div class="col-xs-12 col-md-3">
+            <a href="https://juliealary.github.io/meteo_app.html" title="Météo App"><img
+                    src="asset/img/meteoApp.png"
+                    class="img-responsive center-block img-rounded"
+                    alt="Miniature site Météo App"/></a>
+            <p>Application météo développé avec l'API Weather Underground & JQuery (FreeCodeCamp exercice)</p>
+        </div>
+        <div class="col-xs-12 col-md-3">
             <a href="https://to-do-list-juliealary.c9users.io/to-do-list.php" target="_blank"
                title="todo list en php"><img
                     src="asset/img/ShopList.jpg" class="img-responsive center-block img-rounded"
