--- a/cv.html
+++ b/cv.html
@@ -97,7 +97,7 @@
 </section>
 
     <div class="col-md-6 col-md-offset-3 text-center">
-        <a class="btn btn-default btn-lg" href="CV-julie-alary.pdf" role="button" target="_blank">Télécharger le cv</a>
+        <a class="btn btn-default btn-lg" href="Julie-Alary-CV.pdf" role="button" target="_blank">Télécharger le cv</a>
     </div>
         
     <div class="row arrow_cv">
