--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Julie Alary || Portfolio</title>
     <meta name="description"
-          content="Accueil de mon portfolio : je suis actuellement une formation de Webdeveloppeur à l'école Objectif 3W. J'apprends les langages Php, Html, Css, javaScript..."/>
+          content="Accueil de mon portfolio : je suis développeuse web junior spécialisée dans le langage PHP et le Framework Symfony. Je me forme continuellement sur divers langages et divers technos. Voici mon portfolio personnel qui contient une liste non exhaustive de me réalisations."/>
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="ie-lt9.css">
     <script type="text/javascript" src="js/html5shiv.js"</script>
@@ -24,7 +24,6 @@
     <!-- // Code HTML réservé aux navigateurs autres que IE -->
     <link href="css/style.css" rel="stylesheet" media="screen" type="text/css">
     <!--<[endif]-->
-
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -39,7 +38,7 @@
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80331218-1', 'auto');
         ga('send', 'pageview');
-    </script>
+    </script><!-- google analytics -->
 </head>
 
 <body>
@@ -54,7 +53,6 @@
 
 <header role="banner" id="jumbotron">
     <h1 class="text-center"><strong>Julie Alary<br/><br/>Développeuse Web</strong></h1>
-    <h2><strong>En recherche active d'emploi</strong></h2>
 </header>
 
 <section role="main" id="portfolio" class="container-fluid">
