update infos + nomaddium added

--- a/cv.html
+++ b/cv.html
@@ -61,9 +61,14 @@
 
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 experience">
     <h2>EXPERIENCES</h2>
+      <h3>Avril 2017 - aujourd'hui : Développeuse PHP/Symfony - Spyrit Système d'information</h3>
+      <p>Développement d'applications from scratch & maintenance d'applications</p>
+      <p>Technos utilisées : Symfony 1, 2, 3 & 4, ORM(Doctrine, Propel), SQL, Git, Yarn</p>
+      <hr>
       <h3>2016-2017 (2 mois) : Développeuse web (stage) - Iwit-Systems</h3>
       <p>Utilisation de du Framework Symfony 3 pour développer des modules : bloc-note, gestion des actus...</p>
       <p>Technos utilisées : PhpStorm - Git - Bootstrap - Symfony 3 (Doctrine, Twig) - FosUserBundle - Isotope - Mansonry - SwiftMailer</p>
+      <hr/>
       <h3>2015 : Déléguée Commerciale - Editions Jocatop</h3>
       <p>Vente directe, Prise de rendez-vous, Phonning, Organisation de tournées sur trois départements.</p>
       <hr/>
