--- a/index.html
+++ b/index.html
@@ -61,7 +61,21 @@
             <a href="http://phpcodeproject.herokuapp.com/" target="_blank" title="MyCMS application personnelle"><img
                     src="asset/img/mycms.png" class="img-responsive center-block img-rounded"
                     alt="Miniature vers myCMS"/></a>
-            <p>Création d'un CMS pour mon examen de fin d'année (réalisé avec Symfony)</p>
+            <p>Développement d'un CMS pour mon examen de fin d'année (réalisé avec Symfony)</p>
+        </div>
+        <div class="col-xs-12 col-md-3">
+            <a href="http://nomaddium.com/" target="_blank" title="Nomaddium Wordpress From Scratch"><img
+                    src="asset/img/nomaddium.png"
+                    class="img-responsive center-block img-rounded"
+                    alt="miniature Wordpress from scratch Nomaddium"/></a>
+            <p>Développement thème personnalisé, site Wordpress From Scratch, Artiste Nomaddium</p>
+        </div>
+        <div class="col-xs-12 col-md-3">
+            <a href="site_wordpress.html" target="_blank" title="association syrien ne bouge"><img
+                    src="asset/img/accueil.jpg"
+                    class="img-responsive center-block img-rounded"
+                    alt="Miniature site association syrien ne bouge"/></a>
+            <p>Développement thème personnalisé, site Wordpress From Scratch pour l'association Syrien ne bouge</p>
         </div>
         <div class="col-xs-12 col-md-3">
             <a href="http://codepen.io/Julie31/full/rezxGd/" target="_blank"
@@ -70,6 +84,9 @@
                                                           alt="Minitature du tribute sur Santigold"></a>
             <p> One page avec Bootstrap (exercice FreeCodeCamp)</p>
         </div>
+    </div>
+
+    <div class="row">
         <div class="col-xs-12 col-md-3">
             <a href="http://codepen.io/Julie31/full/yOzyaV/" target="_blank" title="random quote"><img
                     src="asset/img/random.jpg"
@@ -77,16 +94,6 @@
                     alt="miniature exercice random quote santigold"/></a>
             <p>Générateur aléatoire de citation en JavaScript ( exercice FreeCodeCamp)</p>
         </div>
-        <div class="col-xs-12 col-md-3">
-            <a href="site_wordpress.html" target="_blank" title="association syrien ne bouge"><img
-                    src="asset/img/accueil.jpg"
-                    class="img-responsive center-block img-rounded"
-                    alt="Miniature site association syrien ne bouge"/></a>
-            <p>Création d'un site Wordpress pour l'association Syrien ne bouge</p>
-        </div>
-    </div>
-
-    <div class="row">
         <div class="col-xs-12 col-md-3">
             <a href="http://codepen.io/Julie31/full/BWLqWe/" target="_blank" title="landing page"><img
                     src="asset/img/landingpage.png"
@@ -117,8 +124,7 @@
         <h3>Après avoir passé une dizaine d'années dans le Commerce et le Management, j'ai décidé de me reconvertir
             professionnellement</h3>
         <h4>J'ai commencé par m'autoformer sur divers languages, par la suite j'ai passé le diplôme "Développeur
-            Logiciel" <br><br> @ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif
-                3W</a></h4><br/>
+            Logiciel"<br/><br/>Je suis développeuse PHP/Symfony depuis 1 an</h4>
         <p><strong>Mes compétences :</strong></p>
     </div>
 
@@ -140,8 +146,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-3 col-md-3"><img src="asset/img/boostrap.png" class="img-responsive center-block boostrap"
-                                            alt="logo boostrap"/></div>
+        <div class="col-xs-3 col-md-3"><img src="asset/img/mysql.png" class="img-responsive center-block"
+                                            alt="logo mysql"/></div>
         <div class="col-xs-3 col-md-3"><img src="http://symfony.com/logos/symfony_black_03.png?v=5"
                                             class="img-responsive center-block" alt="lolo symfony"></div>
 
