--- a/site_wordpress.html
+++ b/site_wordpress.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
     <link href="css/style_wordpress.css" rel="stylesheet" media="screen">
       <title>"Julie Alary || Création Site Wordpress"</title>
-      <meta name="description" content="Page de présentation de projet de création de site Wordpress pour une association : Syrien ne bouge agissons"
+      <meta name="description" content="Page de présentation de projet de création de site Wordpress pour une association : Syrien ne bouge agissons">
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
@@ -41,7 +41,7 @@
     <section role="main">
         <div class="row">
             <article role="article" class="col-md-6">
-                <h3>Détermination des objectifs :</h3>
+                <h3>Objectifs :</h3>
                     <ul>
                         <li>Remettre le design au goût du jour</li>
                         <li>Permettre au client de pouvoir facilement publier</li>
@@ -52,10 +52,10 @@
             <article role="article" class="col-md-6">
                 <h3>Choix effectués :</h3>
                     <ul>
-                        <li>Pour simplifier l'utilisation du site de ma cliente, et choix a été de conserver Wordpress</li>
-                        <li>Pour pouvoir obtenir le résultat visuel escompté sans être bridé par des thèmes existants, mon choix s'est porté sur un <a href="http://components.underscores.me/#generator" target="_blank">Starter Theme basic Underscores</a></li>
-                        <li>Utilisation du framework Boostrap pour le CSS3</li>
-                        <li>Installation de divers plugins existants, tels que Formidable(formulaire), Yoast SEO(pour le référencement) ...</li>
+                        <li>Pour simplifier l'utilisation du site de ma cliente, le choix a été de conserver Wordpress</li>
+                        <li>Afin d'obtenir le résultat visuel escompté sans être bridé par des thèmes existants, mon choix s'est porté sur un <a href="http://components.underscores.me/#generator" target="_blank">Starter Theme basic Underscores</a></li>
+                        <li>Utilisation du framework Boostrap pour le CSS</li>
+                        <li>Installation de divers plugins existants tel que Yoast SEO(pour le référencement) ...</li>
                     </ul>
             </article>
         </div>
@@ -111,7 +111,7 @@
                         <p class="text-center">Ancienne bibliographie</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="asset/img/BIBLIOGRAPHIE.png" alt="nouvelle biblio" class="img-responsive img-rounded">
+                    <img src="asset/img/bibliographie.png" alt="nouvelle biblio" class="img-responsive img-rounded">
                         <p class="text-center">Nouvelle bibliographie</p>
                 </div>                 
             </div>
@@ -152,7 +152,7 @@
                         <p class="text-center">Ancienne page contact</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="asset/img/Contact.png" alt="nouvelle contact" class="img-responsive img-rounded">
+                    <img src="asset/img/contact.png" alt="nouvelle contact" class="img-responsive img-rounded">
                         <p class="text-center">Nouvelle page contact</p>
                 </div>                 
             </div>
