--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 </section>
 
-<section role="main" id="skills">
+<section role="main" id="skills" class="text-center">
     <div class="about">
         <h2>Passionnée d'informatique</h2>
         <h3>Après avoir passé une dizaine d'années dans le Commerce et le Management, j'ai décidé de me reconvertir
@@ -158,7 +158,7 @@
     </div>
 </section>
 
-<section role="main" id="contact">
+<section role="main" id="contact" class="text-center">
     <div class="title">
         <h2>[Contact me] [Follow me] [fork me] [...]</h2>
     </div>
