cleaning some files & updating exp

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 
 <section role="main" id="skills" class="text-center">
     <div class="about">
-        <h2>Passionnée d'informatique</h2>
-        <h3>Après avoir passé une dizaine d'années dans le Commerce et le Management, j'ai décidé de me reconvertir
-            professionnellement</h3>
-        <h4>J'ai commencé par m'autoformer sur divers languages, par la suite j'ai passé le diplôme "Développeur
-            Logiciel"<br/><br/>Je suis développeuse PHP/Symfony depuis 1 an</h4>
+        <p>Passionnée d'informatique</p>
+        <p>Après avoir passé une dizaine d'années dans le Commerce et le Management, j'ai décidé de me reconvertir
+            professionnellement</p>
+        <p>J'ai commencé par m'autoformer sur divers languages, par la suite j'ai passé le diplôme "Développeur
+            Logiciel"<br/><br/>Je suis développeuse PHP/Symfony depuis 3 ans</p>
         <p><strong>Mes compétences :</strong></p>
     </div>
 
