--- a/cv.html
+++ b/cv.html
@@ -61,7 +61,11 @@
 
   <article role="article" class="col-xs-12 col-sm-6 col-md-4 experience">
     <h2>EXPERIENCES</h2>
-      <h3>Avril 2017 - aujourd'hui : Développeuse PHP/Symfony - Spyrit Système d'information</h3>
+      <h3>Juin 2018 à de nos jours : Développeuse PHP/Symfony - Display Interactive</h3>
+      <p>Développement d'applications from scratch & maintenance d'applications</p>
+      <p>Technos utilisées : Symfony 3 & 4, ORM(Doctrine), SQL, Git, Yarn, AWS, RabbitMq, Docker</p>
+      <hr>
+      <h3>Avril 2017 - mai 2018 : Développeuse PHP/Symfony - Spyrit Système d'information</h3>
       <p>Développement d'applications from scratch & maintenance d'applications</p>
       <p>Technos utilisées : Symfony 1, 2, 3 & 4, ORM(Doctrine, Propel), SQL, Git, Yarn</p>
       <hr>
@@ -93,7 +97,7 @@
       <p>Voyage</p>
       <hr/>
     <h3>Informations Complémentaires</h3>
-      <p>33 ans</p>
+      <p>36 ans</p>
       <p>Permis b</p>
       <p>Anglais et Espagnol - parlé et lu niveau intermédiaire</p>
       <p>Célibataire, sans enfants</p>
@@ -113,7 +117,6 @@
 
 	 <footer role="contentinfo"><p class="navbar-text text-center">&copy Julie Alary</p></footer>
 
-  
    </body>
 
 </html>
